--- a/package.json
+++ b/package.json
@@ -1,42 +1,14 @@
 {
-  "name": "bincoding-ui",
-  "version": "0.1.1",
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.50",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "typescript": "^3.7.5"
-  },
+  "name": "bincoding-test",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "types": "lib",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "tsc -p .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "@babel/preset-typescript": "^7.10.4",
-    "babel-cli": "^6.26.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
