--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bincoding-test",
-  "version": "0.0.1",
+  "name": "bincoding-ui",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "types": "lib",
@@ -10,5 +10,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "^16.9.43",
+    "@types/reactstrap": "^8.5.0",
+    "react": "^16.13.1"
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "reactstrap": "^8.5.1"
+  }
 }
